--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="calculator">
+        <div class="screen"></div>
+        <div class="buttons">
+            <div class="numbers">
+                <button class="zero">0</button>
+                <button class="one">1</button>
+                <button class="two">2</button>
+                <button class="three">3</button>
+                <button class="four">4</button>
+                <button class="five">5</button>
+                <button class="six">6</button>
+                <button class="seven">7</button>
+                <button class="eight">8</button>
+                <button class="nine">9</button>
+            </div>
+            <div class="operators">
+                <button class="plus">+</button>
+                <button class="minus">-</button>
+                <button class="multiply">*</button>
+                <button class="divide">/</button>
+                <button class="equals">=</button>
+            </div>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
