click number to display on screen

--- a/index.html
+++ b/index.html
@@ -8,19 +8,21 @@
 </head>
 <body>
     <div class="calculator">
-        <div class="screen"></div>
+        <div id="screen">
+            <p id="screenp">1234</p>
+        </div>
         <div class="buttons">
-            <div class="numbers">
-                <button class="zero">0</button>
-                <button class="one">1</button>
-                <button class="two">2</button>
-                <button class="three">3</button>
-                <button class="four">4</button>
-                <button class="five">5</button>
-                <button class="six">6</button>
-                <button class="seven">7</button>
-                <button class="eight">8</button>
-                <button class="nine">9</button>
+            <div id="numbers">
+                <button class="hmm zero">0</button>
+                <button class="hmm one">1</button>
+                <button class="hmm two">2</button>
+                <button class="hmm three">3</button>
+                <button class="hmm four">4</button>
+                <button class="hmm five">5</button>
+                <button class="hmm six">6</button>
+                <button class="hmm seven">7</button>
+                <button class="hmm eight">8</button>
+                <button class="hmm nine">9</button>
             </div>
             <div class="operators">
                 <button class="plus">+</button>
@@ -29,7 +31,7 @@
                 <button class="divide">/</button>
                 <button class="equals">=</button>
             </div>
-        </div>
+            <button id="clear">Clear</button>
     </div>
 
     <script src="script.js"></script>
