--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="calculator">
-        <div id="screen">
+        <div class="screen">
             <p id="screenp">1234</p>
         </div>
         <div class="buttons">
@@ -25,10 +25,10 @@
                 <button class="hmm nine">9</button>
             </div>
             <div class="operators">
-                <button class="plus">+</button>
-                <button class="minus">-</button>
-                <button class="multiply">*</button>
-                <button class="divide">/</button>
+                <button class="op plus">+</button>
+                <button class="op minus">-</button>
+                <button class="op multiply">*</button>
+                <button class="op divide">/</button>
                 <button class="equals">=</button>
             </div>
             <button id="clear">Clear</button>
