--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="calculator">
         <div class="screen">
-            <p id="screenp">1234</p>
+            <p id="screenp">very buggy calculator</p>
         </div>
         <div class="buttons">
             <div id="numbers">
